| Summary: | ASTERISK-23989: [patch]SDP offer/answer fails if crypto keys added to non-crypto offer | ||||||||
| Reporter: | Olle Johansson (oej) | Labels: | |||||||
| Date Opened: | 2014-07-03 01:36:32 | Date Closed: | 2016-10-26 08:59:47 | ||||||
| Priority: | Major | Regression? | |||||||
| Status: | Closed/Complete | Components: | Channels/chan_sip/SRTP | ||||||
| Versions: | 1.8.28.2 | Frequency of Occurrence | Constant | ||||||
| Related Issues: |
| ||||||||
| Environment: | Planet earth | Attachments: | ( 0) sdes-rtp-avp.diff | ||||||
| Description: | 1) We got a new SNOM phone configured so it offered RTP/AVP but for some reason added a=crypto SDES keys.
2) Microsoft Lync offers RTP/AVP and optional RTP/SAVP in the same SDP, also adding keys if RTP/SAVP is accepted Asterisk fails offer answer with the message: "We are requesting SRTP for audio, but they responded without it!" and sends 488. This error message is wrong and failing is wrong. We should ignore non-relevant attributes. If RTP/AVP is the offer, just don't check for the crypto keys and activate p->srtp. | ||||||||
| Comments: | By: Olle Johansson (oej) 2014-07-03 01:39:04.318-0500 I guess this patch will work. Will test during today's work. By: Rusty Newton (rnewton) 2014-07-08 18:47:36.936-0500 Feel free to throw it on reviewboard for some others to test/review. By: Rusty Newton (rnewton) 2014-07-08 18:53:49.336-0500 [~oej] I found ASTERISK-22675 and ASTERISK-20234 which may be the same or related issues. Can you verify? By: Walter Doekes (wdoekes) 2016-09-06 03:12:14.203-0500 Git reviews: https://gerrit.asterisk.org/#/c/3234/ <-- by Alexander Traud, does the inverse and accepts the SRTP https://gerrit.asterisk.org/#/c/3828/ <-- by me, a more complete version of sdes-rtp-avp.diff | ||||||||