Trying to accept offers with SDES crypto keys attached to a RTP/AVP offer (non-crypto) This is a test. Don't do this at home. Not yet, anyway.

See issue ASTERISK-23989


git-svn-id: https://origsvn.digium.com/svn/asterisk/team/oej/teapot-1.8@417794 65c4cc65-6c06-0410-ace0-fbb531ad65f3